education and navbar css updated

--- a/src/Components/education/Education.css
+++ b/src/Components/education/Education.css
@@ -7,12 +7,14 @@
   align-items: center;
   margin-bottom: 150px;
 }
+
 .education-heading {
   text-align: center;
   font-size: 52px;
   font-weight: 600;
   margin: 0;
 }
+
 .education-desc {
   text-align: center;
   font-size: 18px;
@@ -20,16 +22,19 @@
   color: #919299;
   margin: 0 10px 20px;
 }
+
 .education-timeline {
   position: relative;
   overflow: hidden;
 }
+
 .education-box {
   padding: 10px 50px;
   position: relative;
   width: 50%;
   margin-bottom: 20px;
 }
+
 .education-text_box {
   padding: 20px 30px;
   background-color: rgba(17, 25, 40, 0.83);
@@ -39,22 +44,27 @@
   border-radius: 16px;
   color: #919299;
 }
+
 .education-text_box img {
   width: 100%;
   margin: 1rem auto;
   display: block;
   border-radius: 10px;
 }
+
 .education-text_box img:hover {
   transform: scale(1.05);
   transition: transform 0.5s ease-in-out;
 }
+
 .education-left_box {
   left: 0;
 }
+
 .education-right_box {
   left: 50%;
 }
+
 .education-icons {
   position: absolute;
   width: 50px;
@@ -64,9 +74,11 @@
   top: 32px;
   z-index: 10;
 }
+
 .education-right_box .education-icons {
   left: -25px;
 }
+
 .education-timeline::after {
   content: "";
   position: absolute;
@@ -78,20 +90,31 @@
   margin-left: -3px;
   z-index: -1;
 }
+
 .education-title {
   color: rgba(255, 255, 255, 0.9);
   font-size: 24px;
   font-weight: 600;
 }
+
 .education-subtitle {
   color: rgb(177, 178, 179);
   font-size: 20px;
   font-weight: 500;
 }
+
+.education-date {
+  color: rgb(177, 178, 179);
+  font-size: 18px;
+  font-weight: 500;
+  margin: 10px 0;
+}
+
 .education-tags_box {
   display: flex;
   flex-wrap: wrap;
 }
+
 .education-tags {
   font-size: 14px;
   padding: 0 6px;
@@ -101,10 +124,12 @@
   color: rgb(133, 76, 230);
   background-color: rgba(133, 76, 230, 0.082);
 }
+
 .education-button_box {
   display: flex;
   flex-wrap: wrap;
 }
+
 .education-button_box a {
   flex: 1;
   min-width: fit-content;
@@ -119,10 +144,12 @@
   border-radius: 12px;
   transition: all ease-in-out 0.5s;
 }
+
 .education-button_box a:hover {
   background-color: rgba(133, 76, 230, 0.7);
   transition: all ease-in-out 0.5s;
 }
+
 .education-left_box_arrow {
   height: 0;
   width: 0;
@@ -134,6 +161,7 @@
   border-left: 15px solid rgba(17, 25, 40, 0.83);
   right: -15px;
 }
+
 .education-right_box_arrow {
   height: 0;
   width: 0;
